src/styles/App.scss
html {
  // Vanilla CSS Variables
  --bg: #fcfcfc;
  --bg-panel: #ebebeb;
  --color-headings: #0077ff;
  --color-headings-hover: #3694ff;
  --color-text: #333333;
  --bg-container: #f4f4f4;
}

// If theme is switched to Dark
html[data-theme="dark"] {
  --bg: #434343;
  --bg-panel: #333333;
  --color-headings: #3694ff;
  --color-headings-hover: #0077ff;
  --color-text: #b5b5b5;
  --bg-container: rgb(138, 138, 138);
}

.App {
  background-color: var(--bg);
  display: flex;
  flex-direction: row;
  gap: 0.5em;
  width: 100%;
  height: 100vh;
  padding: 1em;
  margin: 0;
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: var(--color-headings);
  }
  p {
    color: var(--color-text);
  }
}

#Nav {
  height: 100%;
  width: 10vw;
  background-color: var(--bg);
  .nav-group-header {
    text-align: center;
  }
  p.version {
    font-size: small;
  }
  div.nav-group-ul {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
  }
  ul.nav-ul-topics {
    // height: 100%;
    display: flex;
    flex-direction: column;
    li {
      text-align: center;
      font-size: 1.5em;
      padding: 1em 0;
      // border: 1px solid rgba(152, 152, 152, 0.271);
      a {
        text-decoration: none;
        color: var(--color-text);
      }
    }
  }
  ul.nav-ul-topics-last {
    display: flex;

    li:nth-child(2) a {
      font-size: 1rem;
      color: rgb(220, 20, 60);
    }
  }
}

#MainContent {
  width: 90vw;
  border: none;
  border-radius: 15px;
  background-color: var(--bg-container);
  padding: 1em;
  section.profile-container {
    display: flex;
    justify-content: flex-end;
    div.profile {
      border: 1px solid #000;
      background-color: rgb(147, 0, 239);
      color: #fff;
      border-radius: 50%;
      padding: 0.5em;

      p.initials {
        font-size: 1em;
        font-weight: bold;
      }
    }
  }

  .div-container {
    // background-color: var(--bg-container);
    background-color: var(--bg-panel);
    // margin: 1em;
    padding: 1em;
    border-radius: 15px;

    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto;
  }

  .div-container-settings {
    display: flex;
    flex-direction: row;
    gap: 2em;
    flex-wrap: wrap;
    .ul-settings-list {
      li {
        border: 1px solid gray;
        text-align: center;
        padding: 1em;
      }
    }

    .settings-group:nth-child(1) {
      width: 100%;
    }

    .settings-group:nth-child(2) {
      width: 100%;
    }
  }
}

/* MEDIA QUERY */
// @media all and (min-width: 768px) {
@media all and (min-width: 600px) {
  #MainContent {
    .div-container-settings {
      flex-wrap: nowrap;
      .settings-group:nth-child(1) {
        max-width: 216px;
      }

      .settings-group:nth-child(2) {
        width: 100%;
      }
    }
  }
}

